@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0



class Company{
designation
}


Company "1"-->"*"LegacySystemData :has

LegacySystemData "1"-->"1" LegacySystemDataReader : knows

class LegacySystemDataReader{
csvReaderLegacyData(String fileName)
createLegacySystemData(String[] attributes)
}

class LegacySystemData {
List<LegacySystemData> listLegacy
      List<Object> listSortAlgorithms
      List<Object> listSortOrder
      List<Object> listSortArrivalLeaving
snsUserNumber
vaccineName
dose
lotNumber
scheduledDateTime
arrivalDateTime
nurseAdministrationTime
leavingDateTime
}

@enduml